<resources>
    <string name="app_name">Greenpurse</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget password</string>
    <string name="new_user">new user? sign up here!</string>
    <string name="registration">Registration</string>
    <string name="sing_in">Sing in</string>
    <string name="have_account">already have account !</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="dashboard">dashboard</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="greenpurse">GreenPurse</string>
    <string name="open_nav_drawer">Open navigation drawer</string>
    <string name="close_nav_drawer">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="dashboard_fragment">Dashboard fragment</string>
    <string name="expense_fragment">Expense Fragment</string>
    <string name="income_fragment">Income Fragment</string>
    <string name="zero">000.000</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amount">Amount :</string>
    <string name="type">Type :</string>
    <string name="note">Note :</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="_02_08_2021">02/08/2021</string>
    <string name="_99999">99999</string>
    <string name="_0000_00">0000.00</string>
    <string name="total_expenses">Total expenses :</string>
    <string name="error_field_required">Requires Fields…</string>
    <string name="graph_s_expenses">Graph of Expenses</string>
    <string name="graph_s_incomes">Graph of Incomes</string>
    <string name="total_incomes">Total incomes :</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="add_income">Add incomes</string>
    <string name="add_expense">Add expenses</string>


    <string name="Banner_ads_feedback">ca-app-pub-3762456917778098/4830381314</string>
    <string name="Banner_ads_incomeGraphs">ca-app-pub-3762456917778098/4634940197</string>
    <string name="Banner_ads_logine">ca-app-pub-3762456917778098/6444939216</string>
    <string name="interstitiel_ads_home_income">ca-app-pub-3762456917778098/1308911034</string>



</resources>