<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ResgistrationActivity"
    android:background="@drawable/background_color">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:gravity="center"
                />

            <EditText
                android:id="@+id/email_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:autofillHints=""
                android:hint="@string/email"
                android:background="@drawable/edit_texte_background"
                android:padding="15dp"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/Password_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/password"
                android:background="@drawable/edit_texte_background"
                android:padding="15dp"
                 />

            <EditText
                android:id="@+id/ConfirPass_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:autofillHints=""
                android:hint="@string/confirm_password"
                android:background="@drawable/edit_texte_background"
                android:padding="15dp"
                tools:ignore="TextFields" />

            <Button
                android:id="@+id/button_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/sing_in"
                android:textAppearance="?android:textAppearanceMedium"
                android:background="@drawable/edit_texte_background"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signin_here"
                android:text="@string/have_account"
                android:padding="7dp"
                android:gravity="center"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>