<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/background_color">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <Space
                android:layout_width="match_parent"
                android:layout_height="150dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textColor="@color/white"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:gravity="center"
                />

            <EditText
                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/email"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:background="@drawable/edit_texte_background"
                android:padding="15dp"
                />

            <EditText
                android:id="@+id/Password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:background="@drawable/edit_texte_background"
                android:padding="15dp"
                tools:ignore="TextFields" />
            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/login"
                android:textAppearance="?android:textAppearanceMedium"
                android:background="@drawable/edit_texte_background"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/forget_password"
                android:text="@string/forget_password"
                android:padding="17dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/button_background"
                />
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_reg"
                android:text="@string/new_user"
                android:padding="15dp"
                android:background="@drawable/button_background"
                android:textColor="@color/white"
                android:gravity="center"
                />

        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/Banner_ads_logine">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>