<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="5dp"
    android:layout_margin="5dp"
    android:layout_height="wrap_content"
    tools:targetApi="lollipop"
    app:cardCornerRadius="80dp"
    android:background="@drawable/item_background_color"
    >

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_dashboard_cercle"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_02_08_2021"
                    android:layout_margin="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="bold"
                    android:id="@+id/date_txt_income"
                    android:textColor="@color/expense_color"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:maxLines="2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="bold"
                    android:id="@+id/type_txt_income"
                    android:textColor="@color/expense_color"
                    />

                <TextView
                    android:id="@+id/note_txt_income"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/type_txt_income"
                    android:maxLines="3"
                    android:text="@string/note"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/expense_color"

                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:background="@drawable/item_background_color"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_99999"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="bold"
                    android:id="@+id/ammount_txt_income"
                    android:textColor="@color/expense_color"
                    android:gravity="center"/>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>


</androidx.cardview.widget.CardView>