<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DachboarrdFragment"
    android:orientation="vertical"
    android:background="@drawable/item_background_color">

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        android:elevation="10dp"
        tools:targetApi="lollipop"
        app:cardCornerRadius="80dp"
        android:layout_gravity="center"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/item_dashboard_cercle"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/income"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="#030645" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="#200D0D"
                        android:text="@string/expense"/>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    >

                    <TextView
                        android:id="@+id/income_set_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="#030645" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    >

                    <TextView
                        android:id="@+id/expense_set_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="#200D0D"
                        android:text="@string/zero"/>
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/income"
                    android:textAppearance="?android:textAppearanceLarge" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_income"
                    android:layout_width="match_parent"
                    android:layout_height="160dp">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/expense"
                    android:textAppearance="?android:textAppearanceLarge" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_expense"
                    android:layout_width="match_parent"
                    android:layout_height="160dp">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="160dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/expense_ft_text"
                android:text="@string/add_expense"
                android:padding="5dp"
                android:textColor="#C51010"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:visibility="invisible"
                android:textAppearance="?android:textAppearanceSmall"
                />
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/expense_Ft_btn"
                android:layout_gravity="bottom|end"
                android:backgroundTint="#C51010"
                android:elevation="2dp"
                app:fabSize="mini"
                android:visibility="invisible"
                app:pressedTranslationZ="12dp"
                android:src="@drawable/expense"
                tools:targetApi="lollipop"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="90dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_income"
                android:id="@+id/income_ft_text"
                android:padding="5dp"
                android:textColor="#0B108C"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:visibility="invisible"
                android:textAppearance="?android:textAppearanceSmall"
                />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/income_ft_btn"
                android:layout_gravity="bottom|end"
                android:backgroundTint="#0B108C"
                android:elevation="2dp"
                app:fabSize="mini"
                app:pressedTranslationZ="12dp"
                android:visibility="invisible"
                android:src="@drawable/income"
                android:contentDescription="TODO"
                tools:targetApi="lollipop" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fb_main_plus_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/income"
            app:fabSize="normal" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</LinearLayout>